--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 
                 <p>Despite his many adventures in the Last Frontier, Jason missed the mean, humid streets of Houston. He returned
                     to Texas and spent the next two years teaching high school English. Still unsatisfied, Jason discovered
-                    a love for coding. And the rest, as they say, is history. And yes, Jason knows how lame that last sentence
-                    was.
+                    a love for coding. And so here we are.
                 </p>
             </section>
 
